--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Magic Eight Ball</string>
+    <string name="button_ask">Асуух</string>
+    <string name="welcome_text">Асуултынхаа хариуг эндээс аваарай</string>
 </resources>
